Bug 1173260 - support multiple families for generics. r=heycam, a=ritu